--- a/src/securitySchemes/bearerAuth.yaml
+++ b/src/securitySchemes/bearerAuth.yaml
@@ -1,3 +1,7 @@
 bearerAuth:
-  type: http # I think this needs to be 'mutualTLS' which is supported in OAS 3.1.0 but tooling is lagging
+  type: http # this needs to be 'mutualTLS' which is supported in OAS 3.1.0 but tooling is lagging
   scheme: mutual
+  default: Chia uses mutualTLS bearerAuth where client and server share TLS keys.
+  externalDocs:
+    url: https://github.com/Chia-Network/chia-blockchain/wiki/Farming-on-many-machines#setup-steps
+    description: More information 
