--- a/src/daemon.yaml
+++ b/src/daemon.yaml
@@ -28,12 +28,7 @@ components:
       content:
         application/json:
           schema:
-            type: object
-            properties:
-              kc_user:
-                type: string
-              kc_service:
-                type: string        
+            $ref: "#/components/schemas/key_ring_options"
   responses:
     empty:
       $ref: "./responses/empty.yaml#/empty" 
@@ -46,6 +41,13 @@ components:
       $ref: "./schemas/queued_plot_info.yaml#/queued_plot_info"
     apiResponse:
       $ref: "./schemas/apiResponse.yaml#/apiResponse"
+    key_ring_options:
+      type: object
+      properties:
+        kc_user:
+          type: string
+        kc_service:
+          type: string    
     private_key:
       type: object
       properties:
@@ -451,16 +453,14 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                mnemonic:
-                  type: string
-                passphrase:
-                  type: string
-                kc_user:
-                  type: string
-                kc_service:
-                  type: string                   
+              allOf:
+                - $ref: "#/components/schemas/key_ring_options"
+                - type: object
+                  properties:
+                    mnemonic:
+                      type: string
+                    passphrase:
+                      type: string                               
       responses:
         200:
           $ref: "#/components/responses/empty"
@@ -501,14 +501,12 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                fingerprint:
-                  type: integer
-                kc_user:
-                  type: string
-                kc_service:
-                  type: string                     
+              allOf:
+                - $ref: "#/components/schemas/key_ring_options"
+                - type: object
+                  properties:
+                    fingerprint:
+                      type: integer                                    
       responses:
         200:
           $ref: "#/components/responses/empty"
@@ -564,14 +562,12 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                fingerprint:
-                  type: integer
-                kc_user:
-                  type: string
-                kc_service:
-                  type: string                  
+              allOf:
+                - $ref: "#/components/schemas/key_ring_options"
+                - type: object
+                  properties:
+                    fingerprint:
+                      type: integer              
       responses:
         200:
           description: OK
